# HaskellHost

./: .gitignore  CHANGELOG.md  HaskellHost.cabal  LICENSE  README.md  config.ini
app/: Main.hs
src/: Console.hs  Parser.hs  Scripting.hs
